test/files/neg/plugin-cyclic-dependency/lib/plugins.jar.desired.sha1
adfc1223549e592354b56821ee9ed808d391a859 ?plugins.jar
